--- a/styles/style.css
+++ b/styles/style.css
@@ -105,6 +105,7 @@ h2{
     margin-bottom: 24px;
 }
 
+/* layers style */
 .layer {
     width: 946px;
     display: flex;
@@ -135,6 +136,7 @@ h2{
     margin-left: 180px;
 }
 
+/* section 3 styles */
 .section-3{
     
     width: 100%;
@@ -154,10 +156,11 @@ h2{
     margin-top: 32px;
 }
 
+/* section 4 styles */
 .section-4{
     
     width: 100%;
-    padding: 97px 80px;
+    padding: 30px 80px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -202,3 +205,43 @@ h2{
     margin-bottom: 24px;
 }
 
+/* section 5 styles */
+.section-5 {
+    width: 100%;
+    
+    padding: 20px 80px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.support {
+    color: #ffffff;
+    padding: 80px;
+    background-image: url('../images/handshake.jpg');
+    text-align: center;
+    width: 998px;
+    height: 313px;
+    border-radius: 10px;
+}
+
+.input-field {
+    
+}
+
+.input-field>input {
+    margin-top: 20px;
+    border: none;
+    border-radius: 5px;
+    padding: 20px;
+    width: 548px;
+    height: 50px;
+}
+
+.support-btn {
+    color: black;
+    background-color: #ffffff;
+    padding: 15px;
+    border-radius: 5px;
+}
